docs/7.52/md/abenmesh_modify_table_abexa.md
---
title: "Changing Single Rows in Mesh Paths"
description: |
  This example demonstrates how single rows are changed in mesh paths. Source Code REPORT demo_mesh_modify_table_numbers. CLASS demo DEFINITION. PUBLIC SECTION. CLASS-METHODS: main, class_constructor. PRIVATE SECTION. TYPES: BEGIN OF line1, col1 TYPE i, col2 TYPE i, END OF line1, t_itab1 TYPE SO
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_modify_table_abexa.htm"
abapFile: "abenmesh_modify_table_abexa.htm"
keywords: ["select", "insert", "do", "while", "if", "method", "class", "data", "types", "abenmesh", "modify", "table", "abexa"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) →  [Meshes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_meshes.htm) →  [Meshes - Using Mesh Paths](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_path_usage.htm) →  [MODIFY mesh\_path](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_modify.htm) → 

Changing Single Rows in Mesh Paths

This example demonstrates how single rows are changed in mesh paths.

Source Code

REPORT demo\_mesh\_modify\_table\_numbers.
CLASS demo DEFINITION.
  PUBLIC SECTION.
    CLASS-METHODS:
      main,
      class\_constructor.
  PRIVATE SECTION.
    TYPES:
      BEGIN OF line1,
        col1 TYPE i,
        col2 TYPE i,
      END OF line1,
      t\_itab1 TYPE SORTED TABLE OF line1
                   WITH NON-UNIQUE KEY col1 col2,
      BEGIN OF line2,
        col1 TYPE i,
        col2 TYPE i,
        col3 TYPE i,
      END OF line2,
      t\_itab2 TYPE SORTED TABLE OF line2
                   WITH NON-UNIQUE KEY col1
                   WITH UNIQUE HASHED KEY mkey
                        COMPONENTS col1 col2,
      BEGIN OF MESH t\_mesh,
        node1 TYPE t\_itab1
        ASSOCIATION \_node2\_1 TO node2 ON col1 = col1
                                     AND col2 = col2
        ASSOCIATION \_node2\_2 TO node2 ON col1 = col1,
        node2 TYPE t\_itab2,
      END OF MESH t\_mesh.
    CLASS-DATA
      mesh TYPE t\_mesh.
ENDCLASS.
CLASS demo IMPLEMENTATION.
  METHOD main.
    DATA(out) = cl\_demo\_output=>new(
      )->begin\_section( 'Initial node1'
      )->write( mesh-node1
      )->next\_section( 'Initial node2'
      )->write( mesh-node2 ).
    out->next\_section( 'Modify One Line Using ON' ).
    MODIFY TABLE mesh-node1\\\_node2\_1\[ mesh-node1\[ 1 \] \]
      FROM VALUE line2( col2 = 111 col3 = 222 )
                 TRANSPORTING col2 col3.
    out->write( mesh-node2 ).
    out->next\_section( 'Modify One Line Using ON and FROM wa' ).
    MODIFY TABLE mesh-node1\\\_node2\_2\[ mesh-node1\[ 2 \] \]
      FROM VALUE line2( col2 = 22 col3 = 333 )
                 USING KEY mkey TRANSPORTING col3.
    out->write( mesh-node2 ).
    out->display( ).  ENDMETHOD.
  METHOD class\_constructor.
    mesh-node1 = VALUE #(
      FOR j = 11 THEN j + 10 WHILE j < 30
          ( col1 = j col2 = j + 1  ) ).
    DO lines( mesh-node1 ) TIMES.
      INSERT VALUE line2( col3 = 3 + sy-index \* 10 )
        INTO TABLE mesh-node1\\\_node2\_1\[ mesh-node1\[ sy-index \] \].
    ENDDO.
  ENDMETHOD.
ENDCLASS.
START-OF-SELECTION.
  demo=>main( ).

Description

Starting from the filled mesh nodes mesh-node1 and mesh-node2, single rows from mesh-node2 are changed:

-   Statement MODIFY TABLE for changing a row using the ON condition.

MODIFY TABLE mesh-node1\\\_node2\_1\[ mesh-node1\[ 1 \] \]
  FROM VALUE line2( col2 = 111 col3 = 222 )
       TRANSPORTING col2 col3.

The ON condition of the association \_node2\_1 covers the primary table key of the node node2 and is used to identify the row that needs to be modified.

-   Statement MODIFY TABLE for changing a row using the ON condition and with a key field from the work area.

MODIFY TABLE mesh-node1\\\_node2\_2\[ mesh-node1\[ 2 \] \]
  FROM VALUE line2( col2 = 22 col3 = 333 )
       USING KEY mkey TRANSPORTING col3.

The ON condition of the association \_node2\_2 does not cover the table key mkey and the missing information is taken from column col2 of the work area after FROM.